--- a/Day 01/exercise.html
+++ b/Day 01/exercise.html
@@ -65,6 +65,7 @@
             const app = (
               <div style={appStyle}>
                 <main style={mainStyle}>
+                  {user}
                 </main>
                   {footer}
               </div>
